@@ -777,9 +777,7 @@
 #       define GETPAGESIZE()  sysconf(_SC_PAGESIZE)
 		/* getpagesize() appeared to be missing from at least one */
 		/* Solaris 5.4 installation.  Weird.			  */
-#       if CPP_WORDSZ == 32
-#	  define DYNAMIC_LOADING
-#    	endif
+#	define DYNAMIC_LOADING
 #   endif
 #   ifdef SUNOS4
 #	define OS_TYPE "SUNOS4"
@@ -820,10 +818,12 @@
       extern int _etext[];
 #     define DATAEND (_end)
 #     define SVR4
-#     define LINUX_STACKBOTTOM
 #     ifdef __arch64__
+	/* libc_stack_end is not set reliably for sparc64 */
+#       define STACKBOTTOM ((ptr_t) 0x80000000000)
 #	define DATASTART (ptr_t)GC_SysVGetDataStart(0x100000, _etext)
 #     else
+#       define LINUX_STACKBOTTOM
 #	define DATASTART (ptr_t)GC_SysVGetDataStart(0x10000, _etext)
 #     endif
 #   endif
